UI: fixed font being too small on mobile

--- a/tooltip.css
+++ b/tooltip.css
@@ -12,3 +12,16 @@
    width: 1em;
    height: auto;
 }
+
+.tippy-tooltip {
+   font-size: 2.0em;
+   overflow-wrap: break-word;
+}
+
+@media (min-width: 1024px) {
+   .tippy-tooltip {
+      font-size: 0.8rem;
+   }
+
+}
+
